fixed cards in tab 2 and builder result grammar

--- a/mobile/RackApp/src/app/tab3/builder-input/builder-input.page.html
+++ b/mobile/RackApp/src/app/tab3/builder-input/builder-input.page.html
@@ -95,7 +95,7 @@
     </div>
 
     <div *ngIf="nay">
-      <h5>Sorry, looks like nothing in your Rack was a match.</h5>
+      <h5>Sorry, looks like we couldn't find {{ matches }} for your {{ requests }}.</h5>
       <br>
       <br>
       <br>
