--- a/mobile/RackApp/src/app/tab2/tab2.page.html
+++ b/mobile/RackApp/src/app/tab2/tab2.page.html
@@ -74,7 +74,7 @@
   </ion-grid>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end" id="new-rack-modal">
-    <ion-fab-button routerLink="new-rack">
+    <ion-fab-button (click)="newRack()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
