--- a/mobile/RackApp/src/app/tab2/new-rack/new-rack.page.html
+++ b/mobile/RackApp/src/app/tab2/new-rack/new-rack.page.html
@@ -58,29 +58,30 @@
         
       </ion-list>
       <br>
-      <!-- show thumbnail of uploaded img here? -->
-      <ion-chip (click)="takePicture()">
-        <ion-icon name="camera-outline" color="primary"></ion-icon>
-        <ion-label>Capture new image </ion-label>
+      <ion-chip (click)="getPicture()">
+        <ion-icon name="camera-outline" color="primary"></ion-icon> 
+        <ion-label> Capture or select image from device </ion-label>
+        <ion-icon name="image-outline" color="primary"></ion-icon>
       </ion-chip>
-      <br>
-      <ion-text>OR</ion-text>
-      <br>
-      <ion-chip>
+      
+      <!-- <ion-text>or</ion-text>
+      
+      <ion-chip (click)="selectPicture()">
         <ion-icon name="image-outline" color="primary"></ion-icon>
         <ion-label>Upload from device</ion-label>
-        <ion-input id="selectFile" type="file" (change)="selectFile($event)" accept="image/x-png,image/gif,image/jpeg"></ion-input>
-      </ion-chip>
+         <ion-input id="selectFile" type="file" (change)="selectFile($event)" accept="image/x-png,image/gif,image/jpeg"></ion-input> -->
+      <!-- </ion-chip>
+      <ion-text color="primary"><small >*Currently supports single image upload only</small></ion-text> --> 
 
       <!-- <ion-item>
         <ion-label>Choose image from device</ion-label>
         <ion-input type="file" (change)="selectFile($event)" accept="image/x-png,image/gif,image/jpeg"></ion-input>
       </ion-item> -->
 
-      <ion-grid *ngIf="img1">
+      <ion-grid *ngIf="imageUrl">
         <ion-row>
           <ion-col>
-            <img alt="" [src]="img1" width="40%"/>
+            <ion-img alt="" [src]="imageUrl" width="40%"></ion-img>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -91,6 +92,21 @@
         </ion-row>
       </ion-grid>
 
+      <!-- <ion-grid *ngIf="img1">
+        <ion-row>
+          <ion-col>
+            <ion-img alt="" [src]="img1" width="40%"></ion-img> 
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-icon type="button" name="close-circle-outline" size="large" color="primary" (click)="remove()"></ion-icon>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid> -->
+
+      
       
 
       
