--- a/mobile/RackApp/src/app/tab2/new-rack/new-rack.page.html
+++ b/mobile/RackApp/src/app/tab2/new-rack/new-rack.page.html
@@ -78,6 +78,22 @@
         <ion-input type="file" (change)="selectFile($event)" accept="image/x-png,image/gif,image/jpeg"></ion-input>
       </ion-item> -->
 
+
+      <ion-grid *ngFor="let photo of photoService.photos; index as position">
+        <ion-row>
+          <ion-col>
+            <ion-img alt="" [src]="photo.webviewPath" width="40%"></ion-img>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-icon type="button" name="close-circle-outline" size="large" color="primary" (click)="remove()"></ion-icon>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+
       <ion-grid *ngIf="imageUrl">
         <ion-row>
           <ion-col>
