working on image stuff

--- a/mobile/RackApp/src/app/components/default-head/default-head.component.html
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.html
@@ -29,7 +29,7 @@
 <div>
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-icon class="ion-padding" type="button" slot="start" name="camera-outline" (click)="takePicture()" color="primary" size="large"></ion-icon>
+      <ion-icon class="ion-padding" type="button" slot="start" name="bag-add-outline" (click)="quickRack()"  color="primary" size="large"></ion-icon>
       <!-- <ion-buttons slot="start">
         <ion-button slot="icon-only" (click)="takePicture()">
           <ion-icon name="camera-outline"></ion-icon>
