fixed main logo

--- a/mobile/RackApp/src/app/components/default-head/default-head.component.html
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.html
@@ -29,28 +29,30 @@
 <div>
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-icon class="ion-padding" type="button" slot="start" name="bag-add-outline" (click)="quickRack()"  color="primary" size="large"></ion-icon>
+      <ion-icon class="ion-padding" type="button" slot="start" name="bag-add-outline" (click)="quickRack()"
+        color="primary" size="large"></ion-icon>
       <!-- <ion-buttons slot="start">
         <ion-button slot="icon-only" (click)="takePicture()">
           <ion-icon name="camera-outline"></ion-icon>
         </ion-button>
       </ion-buttons> -->
-      <ion-buttons slot="end" >
-        
-          <!-- the router isnt working.. maybe because this is the default head? -->
-        <ion-button slot="icon-only"  routerLink="../profile" disabled >
+      <ion-buttons slot="end">
+
+        <!-- the router isnt working.. maybe because this is the default head? -->
+        <ion-button slot="icon-only" routerLink="../profile" disabled>
           <ion-icon name="person-circle-outline" size="large"></ion-icon>
           <!-- <ion-avatar> <img alt="Profile Pic" src="https://ionicframework.com/docs/img/demos/avatar.svg" /> </ion-avatar> make the src image binding of persons pic. if they dont have a pic, make that ion-icon the default img -->
         </ion-button>
-      
+
         <ion-menu-toggle>
           <ion-button fill="clear">
             <ion-icon name="ellipsis-vertical"></ion-icon>
           </ion-button>
         </ion-menu-toggle>
       </ion-buttons>
-      
-      <img src="assets/icon/rack-logo-1.svg" alt="">
+      <div class="default-head">
+        <img class="logo-img" src="assets/icon/rack-logo-5.svg" alt="RACK">
+      </div>
     </ion-toolbar>
   </ion-header>
 </div>
