--- a/mobile/RackApp/src/app/tab2/tab2.page.html
+++ b/mobile/RackApp/src/app/tab2/tab2.page.html
@@ -51,7 +51,7 @@
   <div>
     <ion-grid *ngIf="!gridToggle">
       <ion-row>
-        <ion-col size="12" *ngFor="let item of userRack | filter:filterTerm">
+        <ion-col size="12" sizeSm="6" *ngFor="let item of userRack | filter:filterTerm">
           <ion-card (click)="openModal(item)" type="button">
             <ion-card *ngIf="item.Image">
               <ion-img alt="" [src]="bUrl + item.Image"></ion-img>
@@ -67,12 +67,12 @@
 
     <ion-grid *ngIf="gridToggle">
       <ion-row >
-        <ion-col size="6" *ngFor="let item of userRack | filter:filterTerm">
+        <ion-col size="6" sizeSm="4" *ngFor="let item of userRack | filter:filterTerm">
           <ion-card (click)="openModal(item)" type="button">
             <ion-card *ngIf="item.Image">
               <ion-img alt="" [src]="bUrl + item.Image"></ion-img>
             </ion-card>
-            <ion-card-content>{{item.Title}} <br>
+            <ion-card-content><ion-text class="fw-bold">{{item.Title}} </ion-text><br>
               <ion-text color="medium"><small>#{{item.Season}} #{{item.Item_type}}</small></ion-text></ion-card-content>
           </ion-card>
         </ion-col>
