--- a/mobile/RackApp/src/app/tab3/tab3.page.html
+++ b/mobile/RackApp/src/app/tab3/tab3.page.html
@@ -6,15 +6,14 @@
   <h5>{{ userService.currentUser.FirstName }} X RACK Collab</h5>
   <br>
   
+  
+
   <ion-card>
-    <img alt="closet" src="assets/icon/closet.svg" />
+    <ion-img alt="closet" src="assets/icon/closet.svg"></ion-img>
     <ion-card-content>
       <ion-button expand="block" routerLink="builder-input">Start!</ion-button>
     </ion-card-content>
   </ion-card>
-
-  <!-- put a progress bar thing here after the form... on the toolbar top thing? 
-    https://ionicframework.com/docs/api/progress-bar -->
 
   
     
