--- a/mobile/RackApp/src/app/tabs/tabs.page.html
+++ b/mobile/RackApp/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon src="assets/icon/coat-icon.svg" class="hanger"></ion-icon>
+      <ion-icon src="assets/icon/Clothes_hanger_icon_3.svg" class="hanger"></ion-icon>
       <ion-label>My Rack</ion-label>
     </ion-tab-button>
 
