--- a/mobile/RackApp/src/theme/variables.scss
+++ b/mobile/RackApp/src/theme/variables.scss
@@ -136,7 +136,7 @@
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #ddd9d9;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-color-step-50: #0d0d0d;
@@ -180,7 +180,7 @@
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #ddd9d9;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
