--- a/mobile/RackApp/src/app/components/default-head/default-head.component.scss
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.scss
@@ -3,8 +3,13 @@
 // }
 
 .logo-img {
-    display: grid;
-    margin: auto;
-    width: 27vw;
+    width:27vw;
     height:auto;
 }
+
+// .center-img {
+//     display: flex;
+//     align-items: center;
+//     width:27vw;
+//     height:auto;
+// }
