--- a/mobile/RackApp/src/app/components/item-details/item-details.component.html
+++ b/mobile/RackApp/src/app/components/item-details/item-details.component.html
@@ -32,17 +32,17 @@
   <div *ngIf="defaultView">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>
+        <ion-card-title class="my-1 py-1">
           {{item.Title}}
         </ion-card-title>
         <ion-card-subtitle>
           #{{item.Season}} #{{item.Item_type}}
         </ion-card-subtitle>
       </ion-card-header>
-      <ion-card *ngIf="item.Image">
+      <ion-card *ngIf="item.Image" class="my-2">
         <img [src]="bUrl + item.Image" alt="">
       </ion-card>
-        <ion-card-content>
+        <ion-card-content class="my-3">
           {{item.Description}}
         </ion-card-content>
     </ion-card>
