--- a/mobile/RackApp/src/app/tab2/new-rack/new-rack.page.scss
+++ b/mobile/RackApp/src/app/tab2/new-rack/new-rack.page.scss
@@ -4,3 +4,11 @@ input[type="file"]{
     height: 0;
 
 }
+.logo-img {
+    width:27vw;
+    height:auto;
+}
+
+.default-head {
+    height:fit-content;
+}
