--- a/mobile/RackApp/src/app/tab2/tab2.page.html
+++ b/mobile/RackApp/src/app/tab2/tab2.page.html
@@ -53,10 +53,10 @@
       <ion-row>
         <ion-col size="12" sizeSm="6" *ngFor="let item of userRack | filter:filterTerm">
           <ion-card (click)="openModal(item)" type="button">
-            <ion-card *ngIf="item.Image">
+            <ion-card *ngIf="item.Image" class="my-4">
               <ion-img alt="" [src]="bUrl + item.Image"></ion-img>
             </ion-card>
-            <ion-card-header>
+            <ion-card-header class="my-1 py-1">
               <ion-card-title>{{item.Title}} </ion-card-title>
               <ion-card-subtitle>#{{item.Season}} #{{item.Item_type}} </ion-card-subtitle>
             </ion-card-header>
@@ -69,10 +69,10 @@
       <ion-row >
         <ion-col size="6" sizeSm="4" *ngFor="let item of userRack | filter:filterTerm">
           <ion-card (click)="openModal(item)" type="button">
-            <ion-card *ngIf="item.Image">
+            <ion-card *ngIf="item.Image" class="my-3">
               <ion-img alt="" [src]="bUrl + item.Image"></ion-img>
             </ion-card>
-            <ion-card-content><ion-text class="fw-bold">{{item.Title}} </ion-text><br>
+            <ion-card-content class="my-1 py-1"><ion-text class="fw-bold">{{item.Title}} </ion-text><br>
               <ion-text color="medium"><small>#{{item.Season}} #{{item.Item_type}}</small></ion-text></ion-card-content>
           </ion-card>
         </ion-col>
