--- a/mobile/RackApp/src/theme/variables.scss
+++ b/mobile/RackApp/src/theme/variables.scss
@@ -137,27 +137,27 @@
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ddd9d9;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: 221,217,217;
 
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
+    --ion-color-step-50: #0b0b0b;
+	--ion-color-step-100: #161616;
+	--ion-color-step-150: #212121;
+	--ion-color-step-200: #2c2b2b;
+	--ion-color-step-250: #373636;
+	--ion-color-step-300: #424141;
+	--ion-color-step-350: #4d4c4c;
+	--ion-color-step-400: #585757;
+	--ion-color-step-450: #636262;
+	--ion-color-step-500: #6f6d6d;
+	--ion-color-step-550: #7a7777;
+	--ion-color-step-600: #858282;
+	--ion-color-step-650: #908d8d;
+	--ion-color-step-700: #9b9898;
+	--ion-color-step-750: #a6a3a3;
+	--ion-color-step-800: #b1aeae;
+	--ion-color-step-850: #bcb8b8;
+	--ion-color-step-900: #c7c3c3;
+	--ion-color-step-950: #d2cece;
 
     --ion-item-background: #000000;
 
@@ -177,33 +177,33 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color: #000000;
+    --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ddd9d9;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: 221,217,217;
 
     --ion-border-color: #222222;
 
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
+    --ion-color-step-50: #0b0b0b;
+	--ion-color-step-100: #161616;
+	--ion-color-step-150: #212121;
+	--ion-color-step-200: #2c2b2b;
+	--ion-color-step-250: #373636;
+	--ion-color-step-300: #424141;
+	--ion-color-step-350: #4d4c4c;
+	--ion-color-step-400: #585757;
+	--ion-color-step-450: #636262;
+	--ion-color-step-500: #6f6d6d;
+	--ion-color-step-550: #7a7777;
+	--ion-color-step-600: #858282;
+	--ion-color-step-650: #908d8d;
+	--ion-color-step-700: #9b9898;
+	--ion-color-step-750: #a6a3a3;
+	--ion-color-step-800: #b1aeae;
+	--ion-color-step-850: #bcb8b8;
+	--ion-color-step-900: #c7c3c3;
+	--ion-color-step-950: #d2cece;
 
     --ion-item-background: #1e1e1e;
 
