fixed modals for login and signup

--- a/mobile/RackApp/src/app/pages/startup/login/login.page.html
+++ b/mobile/RackApp/src/app/pages/startup/login/login.page.html
@@ -27,7 +27,7 @@
     <ion-button expand="block"  (click)="login()">Let's Go!</ion-button>
   </form>
   <br>
-  <ion-text>Don't have an account? <a routerLink="../signup">Sign Up!</a></ion-text>
+  <ion-text>Don't have an account? <ion-text (click)="signup()" color="primary">Sign Up!</ion-text></ion-text>
     <br>
     <br>
     <br>
