--- a/mobile/RackApp/src/app/pages/startup/startup.page.html
+++ b/mobile/RackApp/src/app/pages/startup/startup.page.html
@@ -9,8 +9,8 @@
   <br>
   <br>
   <br>
-  <ion-button routerLink="./login">Log In</ion-button><br>
-  <ion-button fill="clear" routerLink="./signup">Sign Up</ion-button>
+  <ion-button (click)="loginModal()">Log In</ion-button><br>
+  <ion-button fill="clear" (click)="signupModal()">Sign Up</ion-button>
   <br>
   <br>
   <br>
