fixed outfit builder cards

--- a/mobile/RackApp/src/app/components/item-details/item-details.component.html
+++ b/mobile/RackApp/src/app/components/item-details/item-details.component.html
@@ -81,7 +81,7 @@
           <ion-icon name="image-outline" color="primary"></ion-icon>
           <ion-label>Add/Replace Image</ion-label>
           <input id="selectFile" #filePicker type="file" (change)="selectFile($event)"
-            accept="image/x-png,image/gif,image/jpeg" />
+            accept="image/x-png,image/gif,image/jpeg,image/webp" />
         </ion-chip>
         <ion-card>
           <ion-item>
