--- a/mobile/RackApp/src/app/tab1/tab1.page.html
+++ b/mobile/RackApp/src/app/tab1/tab1.page.html
@@ -4,7 +4,7 @@
   <!-- do interpolation for these lines -->
   <br>
   <br>
-  <h2 class="greeting title-theme color-main">{{greeting}}, {{ userService.currentUser.FirstName }}!</h2>
+  <h2 class="greeting title-theme color-main">{{greeting}}, {{ firstName }}!</h2>
   <h5 class="quote">"Another day, another outfit!"</h5>
   <br>
   <ion-grid>
